--- a/about.html
+++ b/about.html
@@ -31,9 +31,9 @@
         <p>Feel free to connect with me:</p>
 
         <div class="socials">
-          <a href="mailto:you@example.com" title="Email"><i class="fas fa-envelope"></i></a>
-          <a href="https://github.com/yourusername" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-          <a href="https://linkedin.com/in/yourusername" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
+          <a href="mailto:brentgabriel068@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+          <a href="https://github.com/BrentDC-dizzy" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/brent-gabriel-de-castro-76b518297" title="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
     </div>
